# Vision-Based-Desktop-Automation

./: .gitignore  README.md  grounding.py  main.py  notepad_bot.py  pyproject.toml
