[project]
name = "tjm-project"
version = "0.1.0"
description = "Vision-based desktop automation with dynamic icon grounding"
requires-python = ">=3.9"
dependencies = [
    "pyautogui>=0.9.54",
    "opencv-python-headless>=4.10.0.84",
    "easyocr>=1.7.1",
    "requests>=2.31.0",
    "pygetwindow>=0.0.9",
    "pillow>=10.2.0",
    "pyperclip>=1.8.2",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "*.py",
    "*.png",
]